# tessa_audio

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  env.example
.cursor/rules/: build-and-run.mdc  message-format.mdc  project-overview.mdc
.github/workflows/: build-docker.yml  build-test.yml  main.yml  pr.yml  version.yml
cmake/modules/: FindPortAudio.cmake  FindZeroMQ.cmake
cmake/toolchains/: armv7.cmake
docker/: Dockerfile
docs/: product.md
include/: audio_buffer.h  audio_buffer.hpp  audio_capture.h  audio_capture.hpp  device_manager.hpp  message_format.h  message_format.hpp  version.h  zmq_handler.h  zmq_handler.hpp  zmq_publisher.h  zmq_publisher.hpp
scripts/: build.sh  test.sh  update-version.sh
src/: audio_buffer.cpp  audio_capture.cpp  device_manager.cpp  main.cpp  message_format.cpp  zmq_handler.cpp  zmq_publisher.cpp
tests/: CMakeLists.txt  device_listing_test.cpp  zmq_connectivity_test.cpp
